# datpack-update

./: .gitignore  CHANGELOG.md  LICENSE  README.md  datpack-update.py  pyproject.toml
src/datpack_update/: __main__.py  datpack_update.py  main.py
