[tool.poetry]
name = "datpack-update"
version = "1.0.1"
description = "Update No-Intro DAT files"
authors = ["Andrew Simmons <agsimmons0@gmail.com>"]
license = "MIT"
repository = "https://github.com/agsimmons/datpack-update"
readme = "README.md"

[tool.poetry.scripts]
datpack-update = "datpack_update.datpack_update:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
