[tool.poetry]
name = "datpack-update"
version = "1.1.1"
description = "Update No-Intro DAT files"
authors = ["Andrew Simmons <agsimmons0@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/agsimmons/datpack-update"
readme = "README.md"

[tool.poetry.scripts]
datpack-update = "datpack_update.main:main"

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
